--- a/website/src/_includes/hero.html
+++ b/website/src/_includes/hero.html
@@ -76,7 +76,7 @@
                                 <p class="text-center text-[16px] leading-[24px] tracking-[0.04em] text-white">PLAY</p>
                             </div> #}
                         </div>
-                        <div class="w-full md:hidden my-10 relative flex items-center justify-center bg-[#17203D]">
+                        <div class="w-full md:hidden my-10 relative flex items-center justify-center bg-[#071C46]">
                             <video class="w-full" controls>
                                 <source src="/video/connect.mp4" type="video/mp4">
                             </video>
