--- a/website/src/_includes/layouts/main.html
+++ b/website/src/_includes/layouts/main.html
@@ -35,7 +35,7 @@
         <script src="/js/flag-anchor.js"></script>
         {% block js_scripts %}{% endblock %}
     </head>
-    <body class="bg-white dark:bg-[#0C0B13]">
+    <body class="bg-[#F3FAFF] dark:bg-[#000832]">
         {% include "navbar.html" %}
 
         {{ content | applyGlossary | safe }}
