--- a/website/src/_includes/layouts/privacy.html
+++ b/website/src/_includes/layouts/privacy.html
@@ -30,10 +30,10 @@
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
 
-  <body class="bg-[#F3F6F7] dark:bg-[#0C0B13]">
+  <body class="bg-[#F3FAFF] dark:bg-[#000832]">
     {% include "navbar.html" %}
 
-    <section id="article" class="container mt-[66px] mb-[75px] bg-white dark:bg-[#17203D] px-5">
+    <section id="article" class="container mt-[66px] mb-[75px] bg-white dark:bg-[#071C46] px-5">
       <div class="py-6 md:p-[60px]">{{ content | safe }}</div>
     </section>
 
