--- a/website/src/_includes/layouts/doc.html
+++ b/website/src/_includes/layouts/doc.html
@@ -23,10 +23,10 @@
         <script async defer src="https://buttons.github.io/buttons.js"></script>
     </head>
 
-    <body class="bg-[#F3F6F7] dark:bg-[#0C0B13]">
+    <body class="bg-white dark:bg-[#000832]">
         {% include "navbar.html" %}
 
-        <section id="doc" class="bg-white dark:bg-[#17203D] mt-[66px]">
+        <section id="doc" class="bg-white dark:bg-[#000832] mt-[66px]">
             <div>
                 <main>
                     <aside class="sidebar px-4 lg:px-7">
@@ -77,7 +77,7 @@
                         </div>
                     {% endif %}
 
-                    <div class="sticky top-[66px] bg-white dark:bg-[#17203D] z-[49] !py-2 lg:hidden">
+                    <div class="sticky top-[66px] bg-white dark:bg-[#071C46] z-[49] !py-2 lg:hidden">
                         <div class="relative flex items-center justify-between">
                             <button class="menu flex items-center gap-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" viewBox="0 0 24 24" class="menu-icon h-4 w-4 fill-[rgb(60,60,60)] dark:fill-white">
