--- a/website/src/_includes/layouts/jobs.html
+++ b/website/src/_includes/layouts/jobs.html
@@ -22,10 +22,10 @@
         <script async defer src="https://buttons.github.io/buttons.js"></script>
     </head>
 
-    <body class="bg-[#F3F6F7] dark:bg-[#0C0B13]">
+    <body class="bg-[#F3FAFF] dark:bg-[#000832]">
         {% include "navbar.html" %}
 
-        <section id="doc" class="bg-white dark:bg-[#17203D] mt-[66px]">
+        <section id="doc" class="bg-[#F3FAFF] dark:bg-[#071C46] mt-[66px]">
             <main class="container px-4 lg:px-7 py-10 md:py-16">
                 <div>{{ content | wrapH3s(page) | safe }}</div>
             </main>
