--- a/website/src/_includes/simplex_explained.html
+++ b/website/src/_includes/simplex_explained.html
@@ -11,7 +11,7 @@
     }
     .dark .tab-button{
         color: #fff;
-        background: linear-gradient(#0C0B13, #0C0B13) padding-box,
+        background: linear-gradient(#000832, #000832) padding-box,
             linear-gradient(to bottom, #01F1FF, transparent) border-box;
     }
     .tab-button.active {
@@ -127,7 +127,7 @@ window.addEventListener("load", function () {
                                 targetFrame = 0;
                                 animateToTarget();
                             }
-                        }else if(index === 1){ 
+                        }else if(index === 1){
                             if (currentFrame !== 35) {
                                 targetFrame = 35;
                                 animateToTarget();
@@ -144,7 +144,7 @@ window.addEventListener("load", function () {
                 });
             }
         });
-    }); 
+    });
 
     const targetNode = document.querySelector(".simplex-explained-swiper .swiper-pagination");
     observer.observe(targetNode, { attributes: true });
