--- a/website/src/css/blog.css
+++ b/website/src/css/blog.css
@@ -1,3 +1,4 @@
+h1,
 #article h1 {
   font-size: 38px;
   font-weight: 700;
@@ -19,9 +20,10 @@
   }
 }
 
+.dark h1,
 .dark #article h1 {
-  background: -webkit-linear-gradient(to bottom, #70F0F9 100%, #70F0F9 100%);
-  background: linear-gradient(to bottom, #70F0F9 100%, #70F0F9 100%);
+  background: -webkit-linear-gradient(to bottom, #70F0F9 0%, #70F0F9 33%, #50D8F1 100%);
+  background: linear-gradient(to bottom, #70F0F9 0%, #70F0F9 33%, #50D8F1 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
