--- a/website/src/_includes/layouts/doc.html
+++ b/website/src/_includes/layouts/doc.html
@@ -77,7 +77,7 @@
                         </div>
                     {% endif %}
 
-                    <div class="sticky top-[66px] bg-white dark:bg-[#071C46] z-[49] !py-2 lg:hidden">
+                    <!-- <div class="sticky top-[66px] bg-white dark:bg-[#071C46] z-[49] !py-2 lg:hidden">
                         <div class="relative flex items-center justify-between">
                             <button class="menu flex items-center gap-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" viewBox="0 0 24 24" class="menu-icon h-4 w-4 fill-[rgb(60,60,60)] dark:fill-white">
@@ -106,7 +106,7 @@
                                 </ul>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div>{{ content | safe }}</div>
                 </article>
             </main>
