--- a/website/src/_includes/layouts/main.html
+++ b/website/src/_includes/layouts/main.html
@@ -22,7 +22,7 @@
         <meta property="og:type" content="website"/>
         <meta property="og:title" content="{{ title }}"/>
         <meta property="og:description" content="{{ description }}"/>
-        <meta property="og:image" content="{% cfg 'siteLocation' %}/img/share_simplex.png"/>
+        <meta property="og:image" content="{% cfg 'siteLocation' %}/img/share_simplex.jpg"/>
         <meta name="twitter:card" content="summary"/>
         <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon.ico"/>
 
