--- a/website/src/_includes/layouts/privacy.html
+++ b/website/src/_includes/layouts/privacy.html
@@ -19,7 +19,7 @@
     {% if image %}
       <meta property="og:image" content="{% cfg 'siteLocation' %}/blog/{{ image }}" />
     {% else %}
-      <meta property="og:image" content="{% cfg 'siteLocation' %}/img/share_simplex.png" />
+      <meta property="og:image" content="{% cfg 'siteLocation' %}/img/share_simplex.jpg" />
     {% endif %}
     <meta name="twitter:card" content="summary" />
     <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon.ico" />
