--- a/website/src/_includes/layouts/token.html
+++ b/website/src/_includes/layouts/token.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="{% cfg 'siteLocation' %}{{ permalink }}" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="{{ title }}" />
-    <meta property="og:image" content="{% cfg 'siteLocation' %}/img/share_simplex.png" />
+    <meta property="og:image" content="{% cfg 'siteLocation' %}/img/share_simplex.jpg" />
     <meta name="twitter:card" content="summary" />
     <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon.ico" />
     <link href="/css/tailwind.css" rel="stylesheet" />
