--- a/website/src/_includes/navbar.html
+++ b/website/src/_includes/navbar.html
@@ -97,12 +97,6 @@
                         target="_blank">SimpleXMQ
                         <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg>
                     </a></li>
-                    <hr>
-                    <li>
-                        <a href="/old" class="site-switch-btn">
-                            <p>{{ 'navbar-old-site' | i18n({}, lang) }}</p>
-                        </a>
-                    </li>
                 </ul>
             </li>
 
@@ -117,9 +111,9 @@
     </nav>
 
     <div class="right-links">
-        {% if ('old' not in page.url) %}
-            <a class="box-btn token md:hidden" href="/token">
-                {{ 'navbar-token' | i18n({}, lang) }}
+        {% if ('donate' not in page.url) %}
+            <a class="box-btn token md:hidden" href="/donate">
+                {{ 'donate' | i18n({}, lang) }}
             </a>
         {% endif %}
         <button href="#" class="theme-switch-btn">
@@ -140,7 +134,7 @@
             </svg>
         </button>
 
-        {% if ('blog' not in page.url) and ('about' not in page.url) and ('privacy' not in page.url) and ('directory' not in page.url) and ('token' not in page.url) %}
+        {% if ('blog' not in page.url) and ('about' not in page.url) and ('donate' not in page.url) and ('privacy' not in page.url) and ('directory' not in page.url) and ('vouchers' not in page.url) %}
         <div class="nav-link flag-container">
             <a href="javascript:void(0);">
                 {% for language in languages.languages %}
