--- a/website/src/_includes/footer.html
+++ b/website/src/_includes/footer.html
@@ -8,6 +8,10 @@
 
                 <div class="flex flex-col items-center lg:items-start lg:flex-row gap-[150px] lg:gap-[350px]">
                     <div class="flex flex-col items-center lg:items-start">
+                        <a href="/{{ '' if lang == 'en' else lang ~ '/' }}why"
+                            class="text-grey-black dark:text-white text-[14px] font-medium leading-[28px] tracking-[0.01em] mb-3 flex items-center gap-1">
+                            {{ "why-footer-link" | i18n({}, lang ) | safe }}
+                        </a>
                         <a href="/about/"
                             class="text-grey-black dark:text-white text-[14px] font-medium leading-[28px] tracking-[0.01em] mb-3 flex items-center gap-1">
                             {{ "about-and-contact-us" | i18n({}, lang ) | safe }}
