--- a/website/src/css/design3.css
+++ b/website/src/css/design3.css
@@ -434,13 +434,6 @@ section.cover div.content p {
     max-width: calc(var(--sec-vwu) * 53);
 }
 
-section.cover div.content a.why-link {
-    margin-top: calc(var(--sec-vhu) * -2);
-    font-family: "Manrope", "GT-Walsheim", sans-serif;
-    font-size: calc(var(--sec-vwu) * 2.8);
-    font-weight: 400;
-}
-
 .publications-btns {
     position: absolute;
     bottom: 24px;
@@ -823,6 +816,10 @@ main .section-bg {
     max-width: calc(var(--sec-vwu)*31) !important;
 }
 
+.page-3 .text-container a {
+    max-width: calc(var(--sec-vwu)*31) !important;
+}
+
 .page-3 .text-container,
 .page-4 .text-container {
     margin-left: auto;
@@ -926,11 +923,6 @@ main .section-bg {
         font-weight: 400;
         font-size: calc(var(--sec-vwu) * 5.5);
         max-width: calc(var(--sec-vwu) * 93);
-    }
-
-    section.cover div.content a.why-link {
-        margin-top: calc(var(--sec-vhu) * -1);
-        font-size: calc(var(--sec-vwu) * 6);
     }
 
     /* --- MAIN SECTIONS --- */
